# mc_rtc_data

./: .gitmodules  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml  conan.yml  package.yml
.github/workflows/sources/: package.yml
cmake/: Config.cmake.in
conan/test_package/: CMakeLists.txt  conanfile.py
debian/: CMakeLists.txt  changelog  control  control.ros  copyright  mc-rtc-data.install  ros-ROS_DISTRO-mc-rtc-data.install  ros-ROS_DISTRO-mc-rtc-data.links  rules
jvrc_description/: CMakeLists.txt  README.md  package.xml
jvrc_description/calib/jvrc1/: calib_data.LeftFootForceSensor  calib_data.LeftHandForceSensor  calib_data.RightFootForceSensor  calib_data.RightHandForceSensor
jvrc_description/convex/jvrc1/: L_ANKLE_P_S-ch.txt  L_ELBOW_P_S-ch.txt  L_ELBOW_Y_S-ch.txt  L_KNEE_S-ch.txt  L_LINDEX_S-ch.txt  L_LLITTLE_S-ch.txt  L_SHOULDER_P_S-ch.txt  L_SHOULDER_Y_S-ch.txt  L_WRIST_Y_S-ch.txt  NECK_P_S-ch.txt  NECK_Y_S-ch.txt  PELVIS_S-ch.txt  R_ANKLE_P_S-ch.txt  R_HIP_R_S-ch.txt  R_HIP_Y_S-ch.txt  R_KNEE_S-ch.txt  R_LTHUMB_S-ch.txt  R_SHOULDER_P_S-ch.txt  R_ULITTLE_S-ch.txt  R_WRIST_Y_S-ch.txt  WAIST_R_S-ch.txt  WAIST_Y_S-ch.txt
jvrc_description/meshes/: L_ANKLE_P_S.dae  L_ELBOW_P_S.dae  L_ELBOW_Y_S.dae  L_HIP_R_S.dae  L_HIP_Y_S.dae  L_KNEE_S.dae  L_LINDEX_S.dae  L_LLITTLE_S.dae  L_LTHUMB_S.dae  L_SHOULDER_P_S.dae  L_SHOULDER_Y_S.dae  L_UINDEX_S.dae  L_ULITTLE_S.dae  L_UTHUMB_S.dae  L_WRIST_Y_S.dae  NECK_P_S.dae  NECK_Y_S.dae  PELVIS_S.dae  R_ANKLE_P_S.dae  R_ELBOW_P_S.dae  R_ELBOW_Y_S.dae  R_HIP_R_S.dae  R_HIP_Y_S.dae  R_KNEE_S.dae  R_LINDEX_S.dae  R_LLITTLE_S.dae  R_LTHUMB_S.dae  R_SHOULDER_P_S.dae  R_SHOULDER_Y_S.dae  R_UINDEX_S.dae  R_ULITTLE_S.dae  R_UTHUMB_S.dae  R_WRIST_Y_S.dae  WAIST_R_S.dae  WAIST_Y_S.dae
jvrc_description/meshes/back/: L_ANKLE_P_S.dae  L_KNEE_S.dae  NECK_P_S.dae  WAIST_R_S.dae
jvrc_description/rsdf/jvrc1/: L_ANKLE_P_S.rsdf  R_ANKLE_P_S.rsdf  l_wrist.rsdf  r_wrist.rsdf
jvrc_description/urdf/: jvrc1.urdf
mc_env_description/: CMakeLists.txt  package.xml
mc_env_description/convex/table/: Table-ch.txt
mc_env_description/meshes/chair/: chair.dae
mc_env_description/meshes/drc_terrain/: BrickA5.stl  BrickA6.stl
mc_env_description/meshes/table/: Table.stl
mc_env_description/rsdf/chair/: chair.rsdf
mc_int_obj_description/: CMakeLists.txt  package.xml
mc_rtc_data/: CMakeLists.txt  package.xml
