<package>
  <name>jvrc_description</name>
  <version>1.0.0</version>
  <description>Description package for the JVRC-1 robot</description>
  <author>Pierre Gergondet</author>
  <maintainer email="pierre.gergondet@gmail.com">Pierre Gergondet</maintainer>
  <license>BSD</license>
  <url>https://gite.lirmm.fr/multi-contact/mc_rtc_ros_data</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>


