<package>
  <name>mc_env_description</name>
  <version>1.0.6</version>
  <description>mc_env_description</description>
  <author>Joris Vaillant</author>
  <maintainer email="pierre.gergondet@gmail.com">Pierre Gergondet</maintainer>
  <license>BSD</license>
  <url>https://gite.lirmm.fr/multi-contact/mc_rtc_ros_data</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>


