<?xml version="1.0"?>
<package>
  <name>mc_rtc_data</name>
  <version>1.0.7</version>
  <description>Data for mc_rtc</description>
  <maintainer email="pierre.gergondet@gmail.com">Pierre Gergondet</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
